# PQCNeonAndroid

./: LICENSE  README.md
NTRUL1Neon/NTRU/: readme.txt
NTRUL1Neon/NTRU/app/: build.gradle.kts
NTRUL1Neon/NTRU/app/src/main/: AndroidManifest.xml
NTRUL1Neon/NTRU/app/src/main/cpp/: CMakeLists.txt  api.h  native-lib.cpp  randombytes.h
NTRUL1Neon/NTRU/app/src/main/cpp/test/: speed.c
NTRUL2Neon/NTRU/: settings.gradle.kts
NTRUL2Neon/NTRU/app/src/main/cpp/: CMakeLists.txt  api.h
NTRUL2Neon/NTRU/app/src/main/cpp/test/: speed.c
NTRUL2Neon/NTRU/app/src/main/java/com/example/ntru/: MainActivity.java
NTRUL2Neon/NTRU/app/src/main/res/values/: strings.xml  themes.xml
NTRUL2Neon/NTRU/app/src/main/res/values-night/: themes.xml
NTRUL2Neon/NTRU/gradle/wrapper/: gradle-wrapper.properties
NTRUL3Neon/NTRU/: readme.txt
NTRUL3Neon/NTRU/app/src/androidTest/java/com/example/ntru/: ExampleInstrumentedTest.java
NTRUL3Neon/NTRU/app/src/main/cpp/: CMakeLists.txt  api.h
NTRUL3Neon/NTRU/app/src/main/cpp/test/: speed.c
NTRUL3Neon/NTRU/app/src/test/java/com/example/ntru/: ExampleUnitTest.java
PQCKyberNeon/: readme.txt  settings.gradle.kts
PQCKyberNeon/app/: build.gradle.kts
PQCKyberNeon/app/src/androidTest/java/com/example/pqckyberneon/: ExampleInstrumentedTest.java
PQCKyberNeon/app/src/main/: AndroidManifest.xml
PQCKyberNeon/app/src/main/cpp/: CMakeLists.txt  neon_poly.c  speed_ntt.c  test_speed_region.c
PQCKyberNeon/app/src/main/cpp/jniLibs/arm64-v8a/lib/: libpapi.so.6.0.0.0
PQCKyberNeon/app/src/main/java/com/example/pqckyberneon/: MainActivity.java
PQCKyberNeon/app/src/main/res/values/: strings.xml  themes.xml
PQCKyberNeon/app/src/main/res/values-night/: themes.xml
PQCKyberNeon/app/src/test/java/com/example/pqckyberneon/: ExampleUnitTest.java
PQCKyberNeon/gradle/wrapper/: gradle-wrapper.properties
